oneIIVI_SIT_metadata/force-app/main/default/objects/Product2/fields/Product_Config__c.field-meta.xml
<CustomField>
    <fullName>Product_Config__c</fullName>
    <label>Product Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4CHWDMXCVR</fullName>
            </value>
            <value>
                <fullName>8CHWDMXCVR</fullName>
            </value>
            <value>
                <fullName>ANTEC</fullName>
            </value>
            <value>
                <fullName>AZNA-CML</fullName>
            </value>
            <value>
                <fullName>BETA/GAMMA</fullName>
            </value>
            <value>
                <fullName>BIG BEAR</fullName>
            </value>
            <value>
                <fullName>BROADWAY</fullName>
            </value>
            <value>
                <fullName>CADDO</fullName>
            </value>
            <value>
                <fullName>C-COR</fullName>
            </value>
            <value>
                <fullName>CWDMPASS</fullName>
            </value>
            <value>
                <fullName>DWDMPASS</fullName>
            </value>
            <value>
                <fullName>EQUALIZED</fullName>
            </value>
            <value>
                <fullName>FIRA</fullName>
            </value>
            <value>
                <fullName>FREMONT</fullName>
            </value>
            <value>
                <fullName>GENNUM</fullName>
            </value>
            <value>
                <fullName>I32X</fullName>
            </value>
            <value>
                <fullName>ICDR</fullName>
            </value>
            <value>
                <fullName>IFFO</fullName>
            </value>
            <value>
                <fullName>INTERLEAVE</fullName>
            </value>
            <value>
                <fullName>IPX</fullName>
            </value>
            <value>
                <fullName>KODEOS</fullName>
            </value>
            <value>
                <fullName>LASER ENTERPRISE</fullName>
            </value>
            <value>
                <fullName>LIGHTSMYTH</fullName>
            </value>
            <value>
                <fullName>MICROSEMI</fullName>
            </value>
            <value>
                <fullName>MOTOROLA</fullName>
            </value>
            <value>
                <fullName>OMEGA</fullName>
            </value>
            <value>
                <fullName>OPTIUM</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PARALLEL</fullName>
            </value>
            <value>
                <fullName>PATHFINDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>